--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "A simple Facebook based secret santa app",
   "main": "src/server/js/app.js",
   "scripts": {
-    "server": "node ./src/server/js/app.js"
+    "build": "rimraf build && NODE_ENV='production' concurrently 'npm test' 'npm run webpack -- -p'",
+    "browser-sync": "cp -R qlik/* build && node ./browser-sync.js",
+    "local": "concurrently 'npm run server' 'npm run browser-sync' 'npm run watch'",
+    "server": "node ./src/server/js/app.js",
+    "start": "npm run local",
+    "test": "standard",
+    "watch": "concurrently 'npm run webpack -- --watch -d' 'npm run watch:lint'",
+    "watch:lint": "onchange '**/*.js' -- standard",
+    "webpack": "webpack --colors"
   },
   "repository": {
     "type": "git",
@@ -22,8 +30,50 @@
   },
   "homepage": "https://github.com/ahmednuaman/facebook-secret-santa-app#readme",
   "dependencies": {
+    "angular": "^1.5.8",
+    "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "lodash": "^4.16.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.6",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "browser-sync": "^2.17.5",
+    "concurrently": "^3.1.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "img-loader": "^1.3.1",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
+    "onchange": "^3.0.2",
+    "progress-bar-webpack-plugin": "^1.9.0",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.2",
+    "standard": "^8.5.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
+  },
+  "standard": {
+    "globals": [
+      "Qva"
+    ],
+    "ignore": [
+      "build"
+    ]
   }
 }
