--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server/js/app.js",
   "scripts": {
     "build": "rimraf build && NODE_ENV='production' concurrently 'npm test' 'npm run webpack -- -p'",
-    "browser-sync": "cp -R qlik/* build && node ./browser-sync.js",
+    "browser-sync": "node ./browser-sync.js",
     "local": "concurrently 'npm run server' 'npm run browser-sync' 'npm run watch'",
     "server": "node ./src/server/js/app.js",
     "start": "npm run local",
@@ -46,6 +46,7 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.0",
     "img-loader": "^1.3.1",
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
