--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular": "^1.5.8",
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "bootstrap-sass": "^3.3.7",
     "express": "^4.14.0",
     "lodash": "^4.16.4"
   },
